Adjusted fonts and colors

--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,12 @@ body {
 }
 
 header, footer {
-  background-color: #ffa500;
+  background-color: #0c4452;
   text-align: left;
 }
 
 header {
-  font-family: Work Sans;
+  font-family: 'Lato', sans-serif;
   color: #fff;
   min-height: 100vh;
   display: flex;
@@ -32,7 +32,7 @@ main {
 }
 
 h1 {
-  font-family: Poppins;
+  font-family: 'Rubik', sans-serif;
   font-size: calc(1em + 3vw);
   padding-bottom: .67em;
   border-bottom: 1px solid;
@@ -40,12 +40,12 @@ h1 {
 }
 
 h2 {
-  font-family: Poppins;
+  font-family: 'Rubik', sans-serif;
   font-size: 18px;
   font-weight: 600;
   letter-spacing: 0.3px;
   text-align: left;
-  color: #ffa500;
+  color: #0c4452;
   padding: 10px 0px 10px 10px;
 }
 
@@ -65,7 +65,7 @@ img {
 .bio {
 color: #ffffff;
 font-size: 24px;
-font-family: 'Work Sans';
+font-family: 'Lato', sans-serif;
 }
 
 .buttonBox {
@@ -99,8 +99,8 @@ font-family: 'Work Sans';
   width: 100%;
 }
 
-.a {
-
+a {
+  color: #02537b;
 }
 
 .c {
@@ -116,7 +116,7 @@ font-family: 'Work Sans';
 
 .mins {
   display: inline-block;
-  font-family: Poppins;
+  font-family: 'Rubik', sans-serif;
   font-size: 14px;
   font-weight: 500;
   letter-spacing: 0.3px;
@@ -127,7 +127,7 @@ font-family: 'Work Sans';
 }
 
 .description {
-  font-family: Work Sans;
+  font-family: 'Lato', sans-serif;
   font-size: 14px;
   font-weight: 300;
   line-height: 1.29;
